# Siparcs2023_CI_CD

./: README.md  env.sh
.circleci/: config.yml
.github/workflows/: .MPIStencil_MPI_CPU.yaml.swp  .MPIStencil_MPI_CPU_Autoconfig.yaml.swp  .MPIStencil_MPI_CPU_Makefile.yaml.swp  .MPIStencil_MPI_OpenACC.yaml.swp  .matrixMult_Fortran_Autoconfig.yaml.swp  .matrixMult_OpenACC_FORTRAN_Autoconfig.yaml.swp  DockerCheck.yaml  Dockerfile  Dockerfile.yaml  MPIStencil_MPI_CPU.yaml  MPIStencil_MPI_CPU_Autoconfig.yaml  MPIStencil_MPI_CPU_CMake.yaml  MPIStencil_MPI_CPU_Makefile.yaml  MPIStencil_MPI_OpenACC.yaml  MPIStencil_MPI_oneThread.yaml  actions.yml  main.yml  matrixMult_CUDA.yaml  matrixMult_CUDA_Autoconfig.yaml  matrixMult_CUDA_Makefile.yaml  matrixMult_Fortran.yaml  matrixMult_Fortran_Autoconfig.yaml  matrixMult_Fortran_CMake.yaml  matrixMult_Fortran_Makefile.yaml  matrixMult_OpenACC.yaml  matrixMult_OpenACC_Autoconfig.yaml  matrixMult_OpenACC_FORTRAN.yaml  matrixMult_OpenACC_FORTRAN_Autoconfig.yaml  matrixMult_OpenACC_FORTRAN_Makefile.yaml  matrixMult_OpenACC_Makefile.yaml  simple_workflow_docker.yaml
Autoconfig/Lesson_2_matrixMult/OpenACC/: build.sh  submit.sh
Autoconfig/Lesson_4_SharedMem/CUDA/: build.sh
Autoconfig/Lesson_5_MPIStencil/oneThread/: build.sh
Autoconfig/MPIStencil/MPI/CPU/: .Makefile.in.swp  .co.swp  .configure.ac.swp  Makefile.in  configure.ac
Autoconfig/MPIStencil/MPI/OpenACC/: .Makefile.in.swl  .Makefile.in.swm  .Makefile.in.swn  .Makefile.in.swo  .Makefile.in.swp  .Makefile.swo  .Makefile.swp  .configure.ac.swp  Makefile.in  configure.ac
Autoconfig/MPIStencil/oneThread/: .Makefile.in.swp  Makefile.in  configure.ac
Autoconfig/matrixMult/CUDA/: Makefile.in  configure.ac
Autoconfig/matrixMult/FORTRAN/: .Makefile.in.swo  .Makefile.in.swp  .configure.ac.swp  Makefile.in  configure.ac
Autoconfig/matrixMult/OpenACC/: Makefile.in  configure.ac
Autoconfig/matrixMult/OpenACC_FORTRAN/: Makefile.in  configure.ac
CLUBB_workflows/: Dockerfile  clubb_casper_cpu.yml  clubb_casper_gpu.yml  clubb_casper_gpu_singularity.yml  clubb_github_cpu.yml
CMake/Lesson_1_matrixAdd/OpenACC_FORTRAN/: submit.sh
CMake/Lesson_2_matrixMult/CUDA/: build.sh
CMake/Lesson_2_matrixMult/OpenACC_FORTRAN/: submit.sh
CMake/Lesson_3_FMA/FMA_tensor/: build.sh  fma_tensor  submit.sh
CMake/Lesson_4_SharedMem/OpenACC/: build.sh
CMake/Lesson_4_SharedMem/autocompare/: submit.sh
CMake/Lesson_5_MPIStencil/MPI/CPU/: build.sh  submit.sh
CMake/Lesson_5_MPIStencil/MPI/OpenACC/: submit.sh
CMake/MPIStencil/MPI/CPU/: CMakeLists.txt
CMake/MPIStencil/MPI/OpenACC/: .CMakeLists.txt.swp
CMake/MPIStencil/oneThread/: .CMakeLists.txt.swp  CMakeLists.txt
CMake/matrixMult/CUDA/: .CMakeLists.txt.swp  CMakeLists.txt
CMake/matrixMult/FORTRAN/: .CMakeLists.txt.swp  CMakeLists.txt
CMake/matrixMult/OpenACC/: CMakeLists.txt
CMake/matrixMult/OpenACC_FORTRAN/: CMakeLists.txt
MPAS-A_workflows/: mpas_casper_cpu.yml  mpas_casper_gpu.yml  mpas_casper_gpu_singularity.yml  mpas_github_cpu.yml
MURaM_workflows/: MURaM_Build.yaml  MURaM_Build_cpu_container_fftwheffte.yaml  MURaM_Build_gpu_container_fftwheffte.yaml  MURaM_build_gpu_container.yaml  MURaM_casper_gpu.yaml  specific_commit.yaml
Makefile/Lesson_1_matrixAdd/CUDA/: submit.sh
Makefile/Lesson_1_matrixAdd/OpenACC/: submit.sh
Makefile/Lesson_2_matrixMult/CUDA/: submit.sh
Makefile/Lesson_3_FMA/OpenACC/: build.sh  submit.sh
Makefile/Lesson_4_SharedMem/CUDA/: submit.sh
Makefile/Lesson_4_SharedMem/OpenACC/: submit.sh
Makefile/Lesson_4_SharedMem/acc_compare/: submit.sh
Makefile/Lesson_4_SharedMem/pgi_compare/: submit.sh
Makefile/Lesson_5_MPIStencil/MPI/OpenACC/: build.sh
Makefile/Lesson_6_MPAS/: .Makefile.swm  .Makefile.swn  .Makefile.swo  .Makefile.swp  .build.swp  Makefile  README.md  build.sh  build_openacc.sh
Makefile/MPIStencil/MPI/CPU/: Makefile
Makefile/MPIStencil/MPI/OpenACC/: .Ma.swp  .Makefile.swo  .Makefile.swp  Makefile
Makefile/MPIStencil/oneThread/: Makefile
Makefile/matrixMult/CUDA/: Makefile
Makefile/matrixMult/FORTRAN/: Makefile
Makefile/matrixMult/OpenACC/: .Makefile.swl  .Makefile.swm  .Makefile.swn  .Makefile.swo  .Makefile.swp  .ma.swp  Makefile
Makefile/matrixMult/OpenACC_FORTRAN/: Makefile
docker/: .Dockerfile.swp  Dockerfile
